[package]
name = "check_urls"
version = "0.2.3"
authors = ["William Droz"]
edition = "2021"
repository = "https://github.com/wdroz/check_urls"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/wdroz/check_urls"
description = "Verify the validity of URLs inside your files"
keywords = ["tools", "CI", "CICD", "CLI"]
categories = ["command-line-utilities"]
exclude = ["/media"]

[dependencies]
clap = { version = "~4", features = ["derive"] }
glob= "0.3.0"
regex = "~1"
tokio = { version = "~1", features = ["full"] }
ignore = "^0.4"
reqwest = { version = "0.11", features = ["json"] }
flume = "^0.11"
